--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,8 @@
-@import url(common.css);
-@import url(controls.css);
-@import url(index-header.css);
-@import url(burger-icon.css);
-@import url(index-products.css);
-@import url(index-footer.css);
+.btn-info {
+    background-color: brown;
+    border-color: brown;
+}
+
+.bg-light {
+    background-color: aqua !important;
+}
